src/main/kotlin/com/example/server/error/ErrorResponse.kt
package com.example.server.error

data class ErrorResponse(
    val code: String,
    val message: String,
    val state: Int
)